# computational_intelligence

./: README.md
HalloweenChallenge/: HalloweenChallenge.ipynb  README.md  Results.md
Lab10/: README.md  lab10.ipynb  pyproject.toml
Lab2/: README.md  lab2-nim.ipynb  pyproject.toml
Lab9/: README.md  lab9.ipynb  lab9_lib.py  pyproject.toml  variations.ipynb
Nim/: lab2-nim.ipynb  pyproject.toml
n-Friends/: README.md  n-friends.ipynb  pyproject.toml
quixo/: DQN.py  MyPlayer.py  README.md  game.py  gameTraining.py  main.py  network_testing.pth  network_testing2.pth  pyproject.toml
set-coverings-assignment/: README.md  pyproject.toml  set-covering.ipynb
