[tool.poetry]
name = "lab10"
version = "0.1.0"
description = "A reinforcement learning agent playing tic-tac-toe"
authors = ["Leo <dardanelloleonardo@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^1.26.2"
ipykernel = "^6.27.1"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.27.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
