[tool.poetry]
name = "n-friends"
version = "0.1.0"
description = ""
authors = ["Leo <dardanelloleonardo@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
black = {extras = ["yupyter"], version = "^22.12.0"}
python = ">=3.11, <3.13"
ipykernel = "^6.25.2"
matplotlib = "^3.8.0"
networkx = "^3.1"
pydot = "^1.4.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
